--- a/linux-ssh.yml
+++ b/linux-ssh.yml
@@ -1,29 +1,28 @@
-name: Ubuntu ssh Virtual Machine
+name: Ubuntu SSH Web Terminal
 on: 
   workflow_dispatch:
+
 defaults:
   run:
     shell: bash
     
-    
 jobs:
-  build:
+  web-terminal:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.5.2
-#    - name: If failed, means ok
-#      run: ./not-exist-file.sh it bloke build
-    - name: Preparing Linux Environment
+    - name: Checkout Repo
+      uses: actions/checkout@v3.5.2
+
+    - name: Update APT
       run: sudo apt-get update
-    - name: Setting Up the Ubuntu Environment
-    #  if: ${{ failure() }}
-      run: bash linux-ssh.sh
+
+    - name: Start Web Terminal using Gotty + Ngrok
+      run: |
+        chmod +x linux-run.sh
+        ./linux-run.sh "$LINUX_USER_PASSWORD" "$NGROK_AUTH_TOKEN"
       env:
         LINUX_USER_PASSWORD: ${{ secrets.LINUX_USER_PASSWORD }}
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-        CHROME_HEADLESS_CODE: ${{ secrets.CHROME_HEADLESS_CODE }}
-        LINUX_MACHINE_NAME: ${{ secrets.LINUX_MACHINE_NAME }}
-        LINUX_USERNAME: ${{ secrets.LINUX_USERNAME }}
-    - name: Keep Running Ubuntu System and keepAlive
-     # if: ${{ failure() }}
+
+    - name: Keep Workflow Running for Access
       run: sleep 6h
