--- a/linux-ssh.yml
+++ b/linux-ssh.yml
@@ -1,11 +1,12 @@
 name: Ubuntu SSH Web Terminal
+
 on: 
   workflow_dispatch:
 
 defaults:
   run:
     shell: bash
-    
+
 jobs:
   web-terminal:
     runs-on: ubuntu-latest
@@ -18,8 +19,10 @@ jobs:
 
     - name: Start Web Terminal using Gotty + Ngrok
       run: |
+        echo "LINUX_USER_PASSWORD=$LINUX_USER_PASSWORD"
+        echo "NGROK_AUTH_TOKEN=$NGROK_AUTH_TOKEN"
         chmod +x linux-run.sh
-        ./linux-run.sh "$LINUX_USER_PASSWORD" "$NGROK_AUTH_TOKEN"
+        ./linux-run.sh
       env:
         LINUX_USER_PASSWORD: ${{ secrets.LINUX_USER_PASSWORD }}
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
